# SpecialRelativity-Dynamics

./: README.md
src/: CMakeLists.txt  IMathematics.h  IParticle.cpp  IParticle.h  IParticleSystem.cpp  IParticleSystem.h  IRelativity.h  main.cpp
src/IMath/: IMatrix4x4.h
src/freeglut/: freeglut_callbacks.c  freeglut_cursor.c  freeglut_display.c  freeglut_ext.c  freeglut_font.c  freeglut_font_data.c  freeglut_gamemode.c  freeglut_geometry.c  freeglut_glutfont_definitions.c  freeglut_init.c  freeglut_input_devices.c  freeglut_joystick.c.ClDclK  freeglut_main.c  freeglut_menu.c  freeglut_misc.c  freeglut_overlay.c  freeglut_spaceball.c.yQCtan  freeglut_state.c  freeglut_stroke_mono_roman.c  freeglut_stroke_roman.c  freeglut_structure.c  freeglut_teapot.c  freeglut_videoresize.c  freeglut_window.c  freeglut_xinput.c
